<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_back"
        style="@style/H1"
        android:layout_width="347dp"
        android:layout_height="40dp"
        android:text="@string/registration"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="@+id/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/go_back"
        app:layout_constraintTop_toTopOf="@+id/go_back"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/go_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/shape"
        android:src="@drawable/title_chevron_left"
        app:tint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:background="@color/Dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/login"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/login"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray_Faded"
            android:drawableRight="@drawable/title_close"/>

        <EditText
            android:id="@+id/mail"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray_Faded"
            android:drawableRight="@drawable/title_close"/>

        <EditText
            android:id="@+id/name"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray_Faded"
            android:drawableRight="@drawable/title_close"/>

        <EditText
            android:id="@+id/password"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray_Faded"
            android:drawableRight="@drawable/title_eye"/>

        <EditText
            android:id="@+id/password_verify"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/password_verify"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray_Faded"
            android:drawableRight="@drawable/title_eye"/>

        <EditText
            android:id="@+id/birthday"
            style="@style/Regular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/birth_date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/White"
            android:inputType="none"
            android:editable="false"
            android:textColorHint="@color/Gray_Faded"
            android:drawableEnd="@drawable/title_calendar_dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/male"
                style="@style/Bold"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/left_grad"
                android:text="@string/male"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/female"
                style="@style/Bold"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/right_shape"
                android:text="@string/female"
                android:textColor="@color/White" />
        </LinearLayout>

        <Button
            android:id="@+id/enter_button"
            style="@style/Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape"
            android:text="@string/sign_up"
            android:textColor="@color/Gray_Faded" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>