<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2"
                android:layout_width="match_parent"
                android:layout_height="464dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

            </androidx.viewpager2.widget.ViewPager2>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progressDrawable="@drawable/dash_drawable"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            </ProgressBar>

            <Button
                android:id="@+id/random_film"
                style="@style/H2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/gradient_16"
                android:drawableStart="@drawable/cube"
                android:text="@string/random_film"
                android:textColor="@color/White"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager2" />

            <Button
                android:id="@+id/all"
                style="@style/H2"
                android:layout_width="37dp"
                android:layout_height="24dp"
                android:layout_marginTop="32dp"
                android:background="@color/Dark"
                android:text="@string/all"
                android:textColor="@color/Gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.925"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/random_film" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fav_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all" />

            <TextView
                android:id="@+id/i_like"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/i_like"
                android:textColor="@color/Accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/random_film" />

            <TextView
                android:id="@+id/all_films"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/all_films"
                android:textColor="@color/Accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all_films" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/feed_btn"
            style="@style/Footnote"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/shape"
            android:drawableTop="@drawable/feed"
            android:text="@string/feed"
            android:textColor="@color/Gray_Faded"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/movie_btn"
            style="@style/Footnote"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/shape"
            android:drawableTop="@drawable/films_grad"
            android:text="@string/movie"
            android:textColor="@color/Accent"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feed_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fav_btn"
            style="@style/Footnote"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape"
            android:drawableTop="@drawable/fav"
            android:text="@string/fav"
            android:stateListAnimator="@null"
            android:textColor="@color/Gray_Faded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/profile_btn"
            style="@style/Footnote"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape"
            android:drawableTop="@drawable/profile"
            android:text="@string/profile"
            android:stateListAnimator="@null"
            android:textColor="@color/Gray_Faded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fav_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

